--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,4 +11,7 @@
       {% endfor %}
     </ul>
   </div>
+  <div class="footer">
+    <a>Copyright © 2020&nbsp;|&nbsp;Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>.</a>
+  </div>
 </div>
