--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
     <p class="post-date">{{ page.date|date:"%Y-%m-%d" }}</p>
     {{ content }}
   </div>
-  {% include about.html %}
+  {% include footer.html %}
 
   <script src="/js/jquery-1.7.1.min.js" type="text/javascript"></script>
   <script src="/js/post.js" type="text/javascript"></script>
