--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,6 @@ layout: default
   </div>
   {% include footer.html %}
 
-  <script src="/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+  <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script src="/js/post.js" type="text/javascript"></script>
 </body>
