--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,6 +11,6 @@
     <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
     <style>{% include style.css %}</style>
   </head>
-  <h1>Mouleon</h1>
+  {% include header.html %}
     {{ content }}
 </html>
