update codehighlight;add analystics

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,17 @@
       <a class="navbar-item" href="/"> Mouleon</a>
     </div>
     <div class="navbar_menu">
-      <a class="navbar-item" href="/About">About</a>
-      <a class="navbar-item" href="/Categories">Categories</a>
+      <a class="navbar-item" href="/about">About</a>
+      <a class="navbar-item" href="/Categories">Category</a>
     </div>
   </div>
 </div>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?624810df048303ba6ee63df1bcb43c9c";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
