--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?624810df048303ba6ee63df1bcb43c9c";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
   <head>
     <meta charset="utf-8" />
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
