--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
+    <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script>
+        $.get(
+          'http://cn.bing.com/HPImageArchive.aspx?format=js&idx=0&n=1',
+          function (r){
+            document.body.innerText=r;
+          }
+        )
+    </script>
     <style>{% include style.css %}</style>
     <script>
     var _hmt = _hmt || [];
