--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="footer-wrapper">
   <div class="footer_contaniner">
-    <p>Copyright © 2020&nbsp;|&nbsp;Theme by <a href="https://github.com/Mouleon/mouleon.github.io" target="_blank">Mouleon</a>&nbsp;|&nbsp;Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll.</a></p>
+    <p>本站由<a href="https://github.com/Mouleon"">Mouleon</a>创建,采用<a href="https://github.com/Mouleon/mouleon.github.io" target="_blank">Mouleon</a>为主题，Copyright © {{ site.since }} - {{ site.time | date: '%Y' }}</p>
   </div>
 </div>
