--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,11 @@ layout: default
     <h1 class="post-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
     <p class="post-date">{{ page.date|date:"%Y-%m-%d" }}</p>
     {{ content }}
+    <div class="post_nav">
+
+      <p class="post-left">上一篇 <a href="{{page.previous.url}}" title="{{page.previous.title}}">{{page.previous.title}}</a></p>
+      <p class="post-right">下一篇 <a href="{{page.next.url}}" title="{{page.next.title}}">{{page.next.title}}</a></p>
+    </div>
   </div>
   {% include footer.html %}
 
