--- a/_includes/style.css
+++ b/_includes/style.css
@@ -466,7 +466,7 @@ a.external:hover {
   background-size: 20%;
   background-size:cover;
   background-position: 50% 50%;
-  background-image: url(https://cdn.jsdelivr.net/gh/Mouleon/Bing_Wallpaper/today.jpg);
+  background-image: ;
 /*  background: #38658c;
   background: -webkit-radial-gradient(top left, #5d3571, #38658c);
   background: -moz-radial-gradient(top left, #5d3571, #38658c);
