--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
     <meta name="author" content="Mouleon" />
     <meta name="renderer" content="webkit">
-    <meta name="keywords" content="Mouleon,Blog,C++,Python,爬虫"/>
+    <meta name="keywords" content="{{site.keywords}}"/>
     <meta name="description" content="Mouleon的博客" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="shortcut icon" href="{{site.cdn}}/favicon.ico" type="image/x-icon" />
