--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,5 +16,5 @@ layout: default
   {% include footer.html %}
 
   <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-  <script src="/js/post.js" type="text/javascript"></script>
+  <script src="{{site.cdn}}/js/post.js" type="text/javascript"></script>
 </body>
