--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,15 +13,15 @@
     <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <style>{% include style.css %}</style>
     <script>
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?624810df048303ba6ee63df1bcb43c9c";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?624810df048303ba6ee63df1bcb43c9c";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
     </script>
   </head>
-  {% include header.html %}
+  {% include nav.html %}
   {{ content }}
 </html>
