--- a/_includes/style.css
+++ b/_includes/style.css
@@ -697,3 +697,44 @@ li.L9 {
   color:white;
   background:#f5f5f5;
 }
+
+ul#_toc{
+  width: 180px;
+  position: fixed;
+  margin-left: 26px;
+  margin-top: 90px;
+  background-color: #fafafa;
+}
+ul#_toc ul{
+  line-height: 2.1em;
+}
+ul#_toc li{
+  line-height: 1.5em;
+  color:#4a4a4a;
+}
+a#toc0 {
+  margin-left: 10px;
+    font-size: 14px;
+    color: #4a4a4a;
+}
+a#toc1 {
+    margin-left: 15px;
+    margin-top: 15px;
+    color: #4a4a4a;
+    font-size: 13px;
+}
+a#toc2 {
+    margin-left: 15px;
+    margin-top: 15px;
+    color: #4a4a4a;
+    font-size: 12px;
+}
+a#toc3 {
+    margin-left: 15px;
+    margin-top: 15px;
+    color: #4a4a4a;
+    font-size: 11px;
+}
+@media screen and (max-width:1200px){
+  #_toc{display:none; }
+}
