--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-    <meta name="author" content="Mouleon" />
-    <meta name="renderer" content="webkit">
-    <meta name="keywords" content="{{site.keywords}}"/>
-    <meta name="description" content="Mouleon的博客" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="shortcut icon" href="{{site.cdn}}/favicon.ico" type="image/x-icon" />
-    <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
-    <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <style>{% include style.css %}</style>
-    <script>
-      var _hmt = _hmt || [];
-      (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?624810df048303ba6ee63df1bcb43c9c";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-      })();
-    </script>
-  </head>
+  {% include header.html %}
   {% include nav.html %}
+  {% include toc.html tags="H2,H3" %}
   {{ content }}
 </html>
