--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -2,10 +2,10 @@
   <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script type="text/javascript">
     if(!window.jQuery) {
-      document.write('<script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" | prepend: site.baseurl }}"><\/script>')
+      document.write('<script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js"}}><\/script>')
     }
   </script>
-  <script src='{{ "{{site.cdn}}/js/toc.js" | prepend: site.baseurl }}'></script>
+  <script src="{{site.cdn}}/js/toc.js"></script>
   <script>
     let tags = {%if include.tags%}"{{include.tags}}"{%else%}"H1,H2,H3,H4"{%endif%};
     let ignore = {%if include.ignore%}"{{include.ignore}}"{%else%}''{%endif%};
