--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<script src="{{site.cdn}}/js/post.js" type="text/javascript"></script>
 <body class="body-post">
   <div class="post-wrapper">
     <h1 class="post-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
@@ -13,7 +14,7 @@ layout: default
     </div>
   </div>
   <div id="return-top" class="top_e">
-  <img src="/images/site/top.png" width="30" id="img" >
+  <img src="{{site.cdn}}/images/site/top.png" width="30" id="img" >
     <div style="width:60px;margin:auto;">
         <p id='font' style="font-size:20px;margin-left:10px;display:none;">返回<br>顶部</p>
     </div>
