--- a/_includes/style.css
+++ b/_includes/style.css
@@ -475,7 +475,7 @@ a.external:hover {
   background-size: 20%;
   background-size:cover;
   background-position: 50% 50%;
-  background-image: url(https://congm.in/bing.php);
+  background-image: url(https://api.mouleon.com/bing.html);
 /*  background: #38658c;
   background: -webkit-radial-gradient(top left, #5d3571, #38658c);
   background: -moz-radial-gradient(top left, #5d3571, #38658c);
