--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!--{% include toc.html tags="H2,H3" %}-->
 <script src="{{site.cdn}}/js/post.js" type="text/javascript"></script>
 <body class="body-post">
   <div class="post-wrapper">
