--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,8 +4,8 @@
       <a class="navbar-item" id="indexPage" href="/"> Mouleon</a>
     </div>
     <div class="navbar_menu">
-      <a class="navbar-item" id="nav_about" href="/about">关于</a>
-      <a class="navbar-item" id="nav_category" href="/Categories">归类</a>
+      <a class="navbar-item" id="nav_about" href="/about.html">关于</a>
+      <a class="navbar-item" id="nav_category" href="/Categories.html">归类</a>
     </div>
   </div>
 </div>
