--- a/_includes/returnTop.html
+++ b/_includes/returnTop.html
@@ -1,5 +1,5 @@
 <div id="return-top" class="top_e">
-<img src="{{site.cdn}}/images/site/top.png" width="30" id="img" >
+<img src="{{site.cdn}}/static/image/site/top.png" width="30" id="img" >
   <div style="width:60px;margin:auto;">
       <p id='font' style="font-size:20px;margin-left:10px;display:none;">返回<br>顶部</p>
   </div>
