--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -5,7 +5,7 @@
       document.write('<script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js"}}><\/script>')
     }
   </script>
-  <script src="{{site.cdn}}/js/toc.js"></script>
+  <script src="{{site.cdn}}/static/js/toc.js"></script>
   <script>
     let tags = {%if include.tags%}"{{include.tags}}"{%else%}"H1,H2"{%endif%};
     let ignore = {%if include.ignore%}"{{include.ignore}}"{%else%}''{%endif%};
