--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,9 +6,8 @@ layout: default
 <body class="body-post">
   <div class="post-wrapper">
     <h1 class="post-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
-    <p class="post-date">{{ page.date|date:"%Y-%m-%d" }}</p>
+    <p class="post-date">Mouleon于 {{ page.date|date:"%Y-%m-%d" }} 发布</p>
     {{ content }}
-
     <div class="post_nav">
       <p class="post-left">上一篇 <a href="{{page.next.url}}" title="{{page.next.title}}">{{page.next.title}}</a></p>
       <p class="post-right">下一篇 <a href="{{page.previous.url}}" title="{{page.previous.title}}">{{page.previous.title}}</a></p>
