--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="shortcut icon" href="{{site.cdn}}/favicon.ico" type="image/x-icon" />
   <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
+  <meta http-equiv="content-language" content="zh-CN">
   <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <style>{% include style.css %}</style>
   <script>
