--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <!--{% include toc.html tags="H2,H3" %}-->
-<script src="{{site.cdn}}/js/post.js" type="text/javascript"></script>
+<script src="{{site.cdn}}/static/js/post.js" type="text/javascript"></script>
 <body class="body-post">
   <div class="post-wrapper">
     <h1 class="post-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
