--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,17 +10,10 @@
     <link rel="shortcut icon" href="{{site.cdn}}/favicon.ico" type="image/x-icon" />
     <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
     <style>{% include style.css %}</style>
-    <script>
-      var _hmt = _hmt || [];
-      (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?1352f49f7f2c52c2a3c2fcf6e8f84e8f";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-      })();
-    </script>
-
   </head>
+  <div style="display:none">
+    <script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278971588&web_id=1278971588"></script>
+  </div>
   {% include nav.html %}
   <body class="body-post">
     <div class="post-wrapper">
