--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,13 +10,7 @@
   <meta http-equiv="content-language" content="zh-CN">
   <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <style>{% include style.css %}</style>
-  <script>
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?1352f49f7f2c52c2a3c2fcf6e8f84e8f";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
-  </script>
 </head>
+<div style="display:none">
+  <script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278971588&web_id=1278971588"></script>
+</div>
