--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="footer-wrapper">
   <div class="footer_contaniner">
-    <p>本站由<a href="https://github.com/Mouleon">Mouleon</a>创建,采用<a href="https://github.com/Mouleon/mouleon.github.io" target="_blank">Mouleon</a>为主题，Copyright © {{ site.since }} - {{ site.time | date: '%Y' }}</p>
+    <p>本站由<a href="https://github.com/oneNeko">oneNeko</a>创建,采用<a href="https://github.com/oneNeko/oneneko.github.io" target="_blank">oneNeko</a>为主题，Copyright © {{ site.since }} - {{ site.time | date: '%Y' }}</p>
   </div>
 </div>
