--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <div class="header_wrapper">
   <div class="nav_container">
     <div class="nav_brand ">
-      <a class="navbar-item" id="indexPage" href="/"> Mouleon</a>
+      <a class="navbar-item" id="indexPage" href="/"> oneNeko</a>
     </div>
     <div class="navbar_menu">
       <a class="navbar-item" id="nav_about" href="/about.html">关于</a>
