--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,15 @@
   <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
   <meta http-equiv="content-language" content="zh-CN">
   <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?796b6ad623e30e48a008a843d8fb8aec";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    
   <style>{% include style.css %}</style>
 </head>
-<div style="display:none">
-  <script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278971588&web_id=1278971588"></script>
-</div>
