--- a/_includes/style.css
+++ b/_includes/style.css
@@ -534,7 +534,7 @@ table td,th {
   background-size: 20%;
   background-size:cover;
   background-position: 50% 50%;
-  background-image: url(https://oneNeko.com/bing);
+  background-image: url(https://www.oneNeko.com/bing);
 /*  background: #38658c;
   background: -webkit-radial-gradient(top left, #5d3571, #38658c);
   background: -moz-radial-gradient(top left, #5d3571, #38658c);
