--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,19 +7,9 @@
     <meta name="renderer" content="webkit">
     <meta name="description" content="Think & Different" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="shortcut icon" href="{{site.cdn}}/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
-    <script>
-      var _hmt = _hmt || [];
-      (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?796b6ad623e30e48a008a843d8fb8aec";
-        var s = document.getElementsByTagName("script")[0]; 
-        s.parentNode.insertBefore(hm, s);
-      })();
-    </script>
     <style>{% include style.css %}</style>
-    
   </head>
   {% include nav.html %}
   <body class="body-post">
