--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 ---
-<!--{% include toc.html tags="H2,H3" %}-->
+{% include toc.html tags="H2,H3" %}
 <script src="{{site.cdn}}/static/js/post.js" type="text/javascript"></script>
 <body class="body-post">
   <div class="post-wrapper">
     <h1 class="post-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
-    <p class="post-date">Mouleon于 {{ page.date|date:"%Y-%m-%d" }} 发布</p>
+    <p class="post-date">oneNeko于 {{ page.date|date:"%Y-%m-%d" }} 发布</p>
     {{ content }}
     <div class="post_nav">
       <p class="post-left">上一篇 <a href="{{page.next.url}}" title="{{page.next.title}}">{{page.next.title}}</a></p>
