--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,8 @@
     <div class="navbar_menu">
       <a class="navbar-item" id="nav_about" href="/about.html">关于</a>
       <a class="navbar-item" id="nav_category" href="/Categories.html">分类</a>
+      <a class="navbar-item" id="nav_about" href="https://bing.oneneko.com">壁纸</a>
+      
     </div>
   </div>
 </div>
