--- a/_includes/style.css
+++ b/_includes/style.css
@@ -229,10 +229,10 @@ a.external:hover {
 }
 .index-wrapper .title {
   display: block;
-  font-size: 22px;
+  font-size: 24px;
   margin-bottom: 15px;
   word-break: break-all;
-  font-weight: bold;
+  font-weight: 400;
   margin-bottom: 25px;
   padding-bottom: 10px;
   border-bottom: 2px solid #eee;
@@ -277,8 +277,8 @@ a.external:hover {
 }
 .post-wrapper .post-title,
 .post-wrapper .post-title a {
-  font-size: 22px;
-  font-weight: bold;
+  font-size: 24px;
+  font-weight: 400;
   margin-bottom: 6px;
   color: #666;
   text-align: center;
@@ -346,13 +346,13 @@ table td,th {
 }
 .post-wrapper h2 {
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 400;
   margin-bottom: 20px;
   border-bottom: 2px solid #eee;
 }
 .post-wrapper h3,h4,h5,h6{
-  font-size: 15px;
-  font-weight: bold;
+  font-size: 16px;
+  font-weight: 400;
   margin-bottom: 25px;
 }
 
@@ -427,7 +427,7 @@ table td,th {
   margin-left: 30px;
   font-size: 14px;
   background: #f2f2f2;
-  border-left: 6px solid #b3b3b3;
+  border-left: 3px solid #b3b3b3;
 }
 .post-wrapper blockquote p{
   margin-left: 15px;
@@ -541,6 +541,7 @@ ol.linenums {
   margin-top: 0;
   margin-bottom: 0;
   color: #5a7b8c;
+  border-left: solid 1px #ccc;
 }
 li.L0,
 li.L1,
@@ -636,8 +637,9 @@ li.L9 {
 .footer-wrapper{
   background-color: #fff;
   height: 80px;
-  box-shadow: 5px 1px 0px rgb(0,0,0,0.1);
+  box-shadow: 0px 0px 1px 1px rgb(0,0,0,0.1);
 }
+
 .footer_contaniner{
   width:100%;
   border-top: solid #f5f5f5 2px;
@@ -782,6 +784,9 @@ a#toc3 {
 }
 
 /* 分类 */
+.category-summary {
+  margin-top: 25px;
+}
 div.category-list{
   margin: 0 auto;
   width:600px;
@@ -839,7 +844,7 @@ div.arc-list li{
 
 h2 {
     font-size: 15px;
-    font-weight: bold;
+    font-weight: 400;
     padding: 12px 0;
 }
 
