--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,3 +5,14 @@
     <p>© {{ site.time | date: '%Y' }}  <a href="http://beian.miit.gov.cn/" target="_blank" >浙ICP备17057622号-3</a></p>
   </div>
 </div>
+<script>
+  var _mtac = {};
+  (function() {
+      var mta = document.createElement("script");
+      mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
+      mta.setAttribute("name", "MTAH5");
+      mta.setAttribute("sid", "500724876");
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(mta, s);
+  })();
+</script>
