--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,6 +5,8 @@
     </div>
     <div class="navbar_menu">
       <a class="navbar-item" id="nav_about" href="/about.html">关于</a>
+      <a class="navbar-item" id="nav_category" href="https://support.qq.com/products/178880?" target="_blank">留言</a>
+      <a class="navbar-item" id="nav_category" href="/links.html">友链</a>
       <a class="navbar-item" id="nav_category" href="/Categories.html">分类</a>
       <a class="navbar-item" id="nav_about" href="https://bing.oneneko.com">壁纸</a>
       
