--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,5 +9,14 @@
   <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
   <meta http-equiv="content-language" content="zh-CN">
   <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?82e4cf933f04a114371db578e619aedc";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>  
   <style>{% include style.css %}</style>
 </head>
