--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,19 +1,19 @@
 <div class="header_wrapper">
-  <div class="nav_container">
-    <div class="nav_brand ">
-      <a class="navbar-item" id="indexPage" href="/"> oneNeko</a>
+    <div class="nav_container">
+        <div class="nav_brand ">
+            <a class="navbar-item" id="indexPage" href="/"> oneNeko</a>
+        </div>
+        <div class="navbar_menu">
+            <a class="navbar-item" id="nav_about" href="/about.html">关于</a>
+            <a class="navbar-item" id="nav_category" href="https://support.qq.com/products/178880?" target="_blank">留言</a>
+            <a class="navbar-item" id="nav_category" href="/links.html">友链</a>
+            <a class="navbar-item" id="nav_category" href="/Categories.html">分类</a>
+            <a class="navbar-item" id="nav_about" href="https://bing.oneneko.com">壁纸</a>
+
+        </div>
     </div>
-    <div class="navbar_menu">
-      <a class="navbar-item" id="nav_about" href="/about.html">关于</a>
-      <a class="navbar-item" id="nav_category" href="https://support.qq.com/products/178880?" target="_blank">留言</a>
-      <a class="navbar-item" id="nav_category" href="/links.html">友链</a>
-      <a class="navbar-item" id="nav_category" href="/Categories.html">分类</a>
-      <a class="navbar-item" id="nav_about" href="https://bing.oneneko.com">壁纸</a>
-      
-    </div>
-  </div>
 </div>
-<script>
+<!--<script>
   var t = 0, b = 100;
   $(window).scroll(function(){
       t = $(this).scrollTop();
@@ -26,4 +26,4 @@
           b = t
       }, 0)
   })
-</script>
+</script>-->
