--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
   <meta http-equiv="content-language" content="zh-CN">
-  <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js" type="text/javascript"></script>
   <script>
     var _hmt = _hmt || [];
     (function() {
