--- a/_includes/returnTop.html
+++ b/_includes/returnTop.html
@@ -1,18 +1,20 @@
 <div id="return-top" class="top_e">
-    <img src="{{site.cdn}}/static/image/site/top.png" width="30" id="img" alt="return-top">
+    <!--<img src="{{site.cdn}}/static/image/site/top.png" width="30" id="img" alt="return-top">-->
+    <svg t="1620872984487" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1307" width="30" height="30"><path d="M910.222222 796.444444c-17.066667 0-34.133333-5.688889-45.511111-17.066666L551.822222 409.6c-11.377778-5.688889-17.066667-11.377778-34.133333-11.377778-5.688889 0-22.755556 5.688889-28.444445 11.377778l-329.955555 364.088889c-22.755556 22.755556-56.888889 22.755556-79.644445 5.688889-22.755556-22.755556-22.755556-56.888889-5.688888-79.644445l329.955555-364.088889c28.444444-34.133333 73.955556-51.2 119.466667-51.2s85.333333 22.755556 119.466666 56.888889l312.888889 364.088889c22.755556 22.755556 17.066667 56.888889-5.688889 79.644445-11.377778 5.688889-28.444444 11.377778-39.822222 11.377777z" p-id="1308" fill="#8a8a8a"></path></svg>
+
     <div style="width:60px;margin:auto;">
         <p id='font' style="font-size:20px;margin-left:10px;display:none;">返回<br>顶部</p>
     </div>
 </div>
 <script type="text/javascript">
-    $(window).scroll(function() {
+    $(window).scroll(function () {
         if ($(window).scrollTop() > 300 && $(window).width() > 900) {
             $('#return-top').fadeIn(300);
         } else {
             $('#return-top').fadeOut(200);
         }
     })
-    $("#return-top").click(function() {
+    $("#return-top").click(function () {
         $('html,body').animate({
             scrollTop: 0
         }, 500);
